material UI is not leaded

--- a/Server/frontend/templates/frontend/index.html
+++ b/Server/frontend/templates/frontend/index.html
@@ -10,7 +10,7 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
     />
-    <link rel="stylesheet" href="{% static 'css/index.css' %}" />
+    <link href="static/css/index.css" rel="stylesheet" />
   </head>
   <body>
     <div id="app"></div>
