--- a/Server/frontend/templates/frontend/index.html
+++ b/Server/frontend/templates/frontend/index.html
@@ -1,3 +1,5 @@
+{% load static %}
+
 <!DOCTYPE html>
 <html>
   <head>
@@ -10,7 +12,7 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
     />
-    <link href="static/css/index.css" rel="stylesheet" />
+    <link href="{% static 'src/styles.css' %}" rel="stylesheet" />
   </head>
   <body>
     <div id="app"></div>
